--- a/client/src/components/Header/components/universal-nav.css
+++ b/client/src/components/Header/components/universal-nav.css
@@ -64,13 +64,15 @@
   color: var(--gray-00);
   font-weight: 600;
   background: var(--love-light);
+  border: solid 2px var(--love-light);
   transition: all 0.3s ease;
 }
 
 .nav-list .nav-item .nav-signin-btn:hover,
 .nav-list .nav-item .nav-signin-btn:focus {
-  color: var(--gray-00) !important;
-  background: var(--love-dark) !important;
+  color: var(--love-light) !important;
+  background: rgba(255, 255, 255, 0) !important;
+  border: solid 2px var(--love-light);
 }
 
 .dropdown-nav-link {
