--- a/client/src/templates/Challenges/components/tool-panel.css
+++ b/client/src/templates/Challenges/components/tool-panel.css
@@ -4,15 +4,18 @@
 }
 
 .tool-panel-group button {
-  background: rgba(255, 255, 255, 0);
-  border-color: var(--gray-90);
-  color: var(--gray-90);
+  background: var(--love-light);
+  color: var(--gray-00);
+  font-weight: 600;
+  font-size: 0.8rem;
+  border: solid 2px var(--love-light);
+  transition: all 0.3s ease;
 }
 
 .tool-panel-group button:hover {
-  background: var(--gray-90);
-  border-color: var(--gray-90);
-  color: var(--theme-color);
+  color: var(--love-light) !important;
+  background: rgba(255, 255, 255, 0) !important;
+  border: solid 2px var(--love-light) !important;
 }
 
 .tool-panel-group-mobile button,
@@ -23,6 +26,9 @@
 .tool-panel-group-mobile {
   display: flex;
   flex-direction: row-reverse;
+  position: fixed;
+  width: 100%;
+  bottom: 0px;
 }
 
 .tool-panel-group-mobile > .btn-block,
