style : redesign donation-modal and completion-modal style

--- a/client/src/templates/Introduction/intro.css
+++ b/client/src/templates/Introduction/intro.css
@@ -554,6 +554,7 @@ hr {
   border-radius: 0;
   -webkit-box-shadow: none;
   box-shadow: none;
+  background: var(--quaternary-background) !important;
 }
 
 .progress-bar {
