--- a/client/src/components/CourseFilter/course-filter.css
+++ b/client/src/components/CourseFilter/course-filter.css
@@ -61,8 +61,12 @@ details[open] > *:not(summary) {
 }
 
 .title-selected-filter {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   border-bottom: 1px solid grey;
-  padding: 20px 0px;
+  padding: 0px 0px 20px 0px;
+  margin: 0px 0px 20px 0px;
 }
 
 .filter-items-container {
