--- a/client/src/components/CourseSearch/search-button.css
+++ b/client/src/components/CourseSearch/search-button.css
@@ -42,6 +42,11 @@
   color: white;
 }
 
+.search-button-container button:hover {
+  background: red;
+  transition: all 0.2s ease-in-out;
+}
+
 @media (max-width: 999px) {
   .search-button-container {
     width: 40%;
