--- a/client/src/client-only-routes/admin/admin-global.css
+++ b/client/src/client-only-routes/admin/admin-global.css
@@ -163,6 +163,7 @@
   border-radius: 10px;
   padding: 15px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
+  margin-left: 32px;
 }
 
 .filter-card {
