feat: add MonthlyEnrollmentStats component and update user stats display with monthly enrollment data

--- a/client/src/client-only-routes/admin/admin-global.css
+++ b/client/src/client-only-routes/admin/admin-global.css
@@ -180,3 +180,11 @@
 .gap-2rem {
   gap: 2rem;
 }
+
+.colorsDetails {
+  background-color: red;
+}
+
+.colorsDetails:hover {
+  background-color: black;
+}
