--- a/client/src/client-only-routes/admin/admin-global.css
+++ b/client/src/client-only-routes/admin/admin-global.css
@@ -188,3 +188,40 @@
 .colorsDetails:hover {
   background-color: black;
 }
+
+.custom-panel-max {
+  background-color: #333333;
+  border: none;
+  border-radius: 10px;
+  padding: 15px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
+}
+
+.custom-panel-max .panel-heading {
+  background-color: transparent;
+  color: white;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.custom-panel-min {
+  background-color: #b10f0f;
+  color: #ffffff;
+  border: none;
+  border-radius: 10px;
+  padding: 15px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
+}
+
+.custom-panel-min .panel-heading {
+  background-color: transparent;
+  color: white;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.highlight-row {
+  transition: background-color 0.2s ease;
+}
+
+.highlight-row:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
